<resources>
    <string name="app_name">Libre</string>
    <string name="app_name_caps">Libre</string>
    <string name="loren_ipsum">How revolutionary is this idea of earth sheltered housing? How long has this technology been tested?
        In Tunisia, the Romans built their courtyards on the ground surface
        and their homes below for protection from the severe heat.
        In central Turkey, archeologists have unearthed 41 earth sheltered cities.
        Kansas City, Missouri has a growing industrial park where over 100 companies have rented
        and bought space in solid limestone, 50 - 200 feet into the earth. St. Pierre de Feric, France
        is the site of 47 homes built into a 45 degree slope. Sacramento, California has</string>
    <string name="rupee_symbol">₹</string>
    <string name="Wlecome">Welcome to Libre</string>
    <string name="reading"><u>Reading</u></string>
    <string name="bookmarked">Bookmarked</string>

    //Login Layout
    <string name="login">Login</string>
    <string name="login_email">email</string>
    <string name="login_pass">password</string>
    <string name="login_or">OR</string>
    <string name="login_newTo">New to Libre ?</string>
    <string name="login_register"><u>Register!</u></string>
    <string name="verify_forgot">Forgot to verify your account ?</string>
    <string name="verify_click"><u>Click Here</u></string>


    //Register Layout
    <string name="register">Register</string>
    <string name="register_">Create Account</string>
    <string name="name">name</string>
    <string name="area">area</string>
    <string name="city">city</string>
    <string name="country">country</string>
    <string name="confirm">confirm password</string>
    <string name="msg">Already have an account ?</string>
    <string name="login_here"><u>Login Here!</u></string>

    //Authentication
    <string name="verify">Verification</string>
    <string name="message">Please Verify your account by entering the verification code send to the given email id</string>
    <string name="verify_code">Verification Code Here</string>
    <string name="verify_button">Verify</string>

    //AddBook
    <string name="addBook">Add Book</string>
    <string name="fiillDetail"><u>Fill the details</u></string>

    //Book Details
    <string name="detail">Book Details</string>
    <string name="descp">DESCRIPTION</string>

    //Splash
    <string name="splash_msg">Welcome to Libre!!</string>

</resources>