<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/login_pic_a"
                android:layout_width="410dp"
                android:layout_height="210dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/register_a"/>

            <LinearLayout
                android:layout_below="@+id/login_pic_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="30dp">
                <TextView
                    android:id="@+id/login_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/quicksand_bold"
                    />

                <EditText
                    android:id="@+id/register_emailTV"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/mail_icon"
                    android:drawablePadding="30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:backgroundTint="@color/black"
                    android:hapticFeedbackEnabled="true"
                    android:hint="@string/login_email"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/register_nameTV"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/register_account_icon"
                    android:drawablePadding="30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/name"
                    android:backgroundTint="@color/black"
                    android:hapticFeedbackEnabled="true"
                    android:textColorHint="@color/gray"
                    android:maxLength="15"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/register_address_icon"
                    android:layout_marginStart="10dp"
                    />

                <EditText
                    android:id="@+id/register_areaTV"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/black"
                    android:hapticFeedbackEnabled="true"
                    android:drawableStart="@drawable/register_area_icon"
                    android:drawablePadding="30dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/area"
                    android:textColorHint="@color/gray"
                    android:maxLength="15"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/register_cityTV"
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:backgroundTint="@color/black"
                        android:hapticFeedbackEnabled="true"
                        android:textColorHint="@color/gray"
                        android:drawableStart="@drawable/register_city_icon"
                        android:drawablePadding="30dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/city"
                        android:maxLength="20"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/register_countryTV"
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:textColorHint="@color/gray"
                        android:backgroundTint="@color/black"
                        android:hapticFeedbackEnabled="true"
                        android:drawableStart="@drawable/register_country_icon"
                        android:drawablePadding="30dp"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/country"
                        android:maxLength="20"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/register_passwordTV"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:backgroundTint="@color/black"
                    android:hapticFeedbackEnabled="true"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="30dp"
                    android:inputType="textWebPassword"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/login_pass"
                    android:textColorHint="@color/gray"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/register_confirmPasswordTV"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:inputType="textWebPassword"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/confirm"
                    android:textColorHint="@color/gray"
                    android:textAlignment="viewStart"
                    android:backgroundTint="@color/black"
                    android:hapticFeedbackEnabled="true"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="280dp"
                    android:layout_height="53dp"
                    android:backgroundTint="@color/login_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="18sp"
                    app:rippleColor="@color/purple_700"
                    android:textAlignment="inherit"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/black"
                    android:text="@string/login_or"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_bold"
                        android:textColor="@color/black"
                        android:text="@string/msg"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5sp"
                        android:textColor="@color/login_register"
                        android:text="@string/login_here"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_bold"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>