<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/login_pic_a"
                android:layout_width="275dp"
                android:layout_height="220dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/login_a"/>

            <LinearLayout
                android:layout_below="@+id/login_pic_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:id="@+id/login_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="32sp" />

                <EditText
                    android:id="@+id/login_emailTV"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/mail_icon"
                    android:drawablePadding="30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/login_email"
                    android:textColorHint="@color/gray"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/black"
                    android:hapticFeedbackEnabled="true"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/login_passwordTV"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/login_pass"
                    android:textColorHint="@color/gray"
                    android:backgroundTint="@color/black"
                    android:hapticFeedbackEnabled="true"
                    android:inputType="textWebPassword"
                    android:maxLength="15"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="280dp"
                    android:layout_height="53dp"
                    android:backgroundTint="@color/login_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="18sp"
                    app:rippleColor="@color/purple_700"
                    android:textAlignment="inherit"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/black"
                    android:text="@string/login_or"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_bold"
                        android:textColor="@color/black"
                        android:text="@string/login_newTo"/>

                    <TextView
                        android:id="@+id/login_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5sp"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="@string/login_register"
                        android:textColor="@color/login_register"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>